@@ -1,5 +1,12 @@
 2004-03-05  Ulrich Weigand  <uweigand@de.ibm.com>
 
+	* config/s390/s390.c (s390_expand_movstr): Clobber double-word
+	register before initializing high and low parts separately.
+	(s390_expand_clrstr): Likewise.
+	(s390_expand_cmpstr): Likewise.
+
+2004-03-05  Ulrich Weigand  <uweigand@de.ibm.com>
+
 	PR optimization/12147
 	* reload1.c (reload_reg_free_p): RELOAD_OTHER conflicts with
 	RELOAD_FOR_OPADDR_ADDR.
